[package]
name = "zwj_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-threadpool = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = [
    "postgres",
    "r2d2",
    "chrono",
    "serde_json",
] }
diesel_migrations = "2.0.0"
async-trait = "0.1.58"
testcontainers = { version = "0.14.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
serde_yaml = "0.9"
config = "0.13"
serde_json = "1.0"
futures-util = "0.3.26"
num_cpus = "1.0"
rand = "0.8.4"
redis = { version = "0.32.5", features = [
    "acl",
    "geospatial",
    "keep-alive",
    "num-bigint",
    "script",
    "streams",
    "tokio-comp",
    "aio",
] }
tokio = { version = "1.0", features = ["full"] }
solana-sdk = "3.0.0"
